Add version.txt as single source of truth for version
- Create version.txt with version number
- bin/treeman reads version from version.txt at runtime
- Add note in PKGBUILD to keep pkgver in sync

--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,5 +1,7 @@
 # Maintainer: Thiago Lucio <thiagodebastos@gmail.com>
 # Contributor: Thiago Lucio <thiagodebastos@gmail.com>
+#
+# NOTE: Keep pkgver in sync with version.txt before each release.
 
 pkgname=treeman
 pkgver=0.1.0
