Update maintainer email to GitHub noreply address

--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,5 +1,5 @@
-# Maintainer: Thiago Lucio <thiagodebastos@gmail.com>
-# Contributor: Thiago Lucio <thiagodebastos@gmail.com>
+# Maintainer: Thiago Lucio <6151341+thiagodebastos@users.noreply.github.com>
+# Contributor: Thiago Lucio <6151341+thiagodebastos@users.noreply.github.com>
 #
 # NOTE: Keep pkgver in sync with version.txt before each release.
 
